<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/framelayout_root"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.neelbedekar.android.quickshare.AddContactActivityFragment"
    tools:showIn="@layout/activity_add_contact">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="@dimen/scrollview_contact_height"
        android:id="@+id/contact_scrollview"
        android:layout_marginTop="@dimen/contacts_margin"
        android:layout_marginStart="@dimen/contacts_margin"
        android:layout_marginEnd="@dimen/contacts_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/name_field_edittext"
                android:inputType="textPersonName"
                android:hint="@string/contact_name"/>
            <EditText
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/phone_field_edittext"
                android:inputType="phone"
                android:hint="@string/contact_phone"/>
            <EditText
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/email_field_edittext"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"/>
            <EditText
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/address_field_edittext"
                android:hint="@string/address"
                android:inputType="textPostalAddress"/>
            <EditText
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/facebook_field_edittext"
                android:hint="@string/facebook_id"
                android:inputType="text"/>
            <EditText
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linkedin_field_edittext"
                android:hint="@string/linkedin_id"
                android:inputType="text"/>
            <EditText
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/twitter_field_edittext"
                android:hint="@string/twitter_handle"
                android:inputType="text"/>
            <EditText
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/snapchat_field_edittext"
                android:hint="@string/snapchat_id"
                android:inputType="text"/>
        </LinearLayout>

    </ScrollView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/add_image_textview"
        android:text="@string/add_image_string"
        android:textSize="@dimen/display_text_size"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/text_image_margin"/>
    <ImageButton
        android:id="@+id/camera_image_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_camera"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_marginBottom="@dimen/add_image_margin"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_accept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_padding_below"
        android:src="@drawable/ic_action_accept"
        app:backgroundTint="@color/color_check_accept"
        android:tint="#ffffff"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_padding_below"
        android:src="@drawable/ic_delete"
        app:backgroundTint="@color/color_check_cancel"
        android:tint="#ffffff"
        />
    <TextView
        android:visibility="visible"
        android:id="@+id/image_preview_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Image Preview:"
        android:layout_gravity="bottom|start"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/image_preview_text_margin_bottom"/>
    <ImageView
        android:layout_width="@dimen/image_preview_dimensions"
        android:layout_height="@dimen/image_preview_dimensions"
        android:id="@+id/image_preview_imageview"
        android:layout_marginBottom="@dimen/image_preview_margin_bottom"
        android:layout_gravity="bottom|center_horizontal"/>


</FrameLayout>
