<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.neelbedekar.android.quickshare.ContactDetailFragment">


    <ImageView
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/contacts_margin"
        android:contentDescription="@string/detail_delete"
        android:src="@drawable/ic_delete"
        android:layout_alignParentEnd="true" />
    <TextView
        android:id="@+id/delete_text"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/delete_button"
        android:layout_marginEnd="@dimen/list_item_margin"
        android:textAlignment="center"
        android:text="@string/detail_delete"
        android:layout_alignParentEnd="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/delete_button">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/detail_linear_layout"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="3"
                    android:layout_marginStart="@dimen/fab_margin">
                    <ImageView
                        android:id="@+id/detail_image"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:contentDescription="@string/contact_image_content_description"
                        android:layout_margin="@dimen/fab_margin"/>
                    <TextView
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/contact_phone"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/email_address"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/address"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/facebook_id"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/linkedin_id"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/twitter_handle"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:text="@string/snapchat_id"
                        android:textSize="@dimen/display_text_size"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="4"
                    android:layout_marginEnd="@dimen/fab_margin">
                    <TextView
                        android:id="@+id/detail_name"
                        android:layout_margin="@dimen/fab_margin"
                        android:paddingTop="30dp"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:id="@+id/detail_phone_text"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:id="@+id/detail_email_text"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:id="@+id/detail_address_text"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:id="@+id/detail_facebook_text"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:id="@+id/detail_linkedin_text"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:id="@+id/detail_twitter_text"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="@dimen/display_text_size"/>
                    <TextView
                        android:id="@+id/detail_snapchat_text"
                        android:layout_margin="@dimen/fab_margin"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:textSize="@dimen/display_text_size"/>
                </LinearLayout>
            </LinearLayout>
            <Button
                android:id="@+id/map_button"
                android:layout_width="100dp"
                android:layout_height="60dp"
                android:text="@string/map_string"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
